--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -11,6 +11,81 @@ body_class: volunteer
       <p>
         Lorem ipsum
       </p>
+      
+      <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=40d263ea9e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Join the YEP team</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE5">Zip Code  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5">
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE3">Please select one of the departments that you are </label>
+	<select name="MMERGE3" class="" id="mce-MMERGE3">
+	<option value=""></option>
+	<option value="Job Placement Coordinator">Job Placement Coordinator</option>
+<option value="Professional Mentoring Lead">Professional Mentoring Lead</option>
+<option value="Student Mentoring Lead">Student Mentoring Lead</option>
+<option value="Personal Development">Personal Development</option>
+<option value="Assisting new-comers">Assisting new-comers</option>
+<option value="Diaspora and Community Engagement">Diaspora and Community Engagement</option>
+<option value="Marketing Manager">Marketing Manager</option>
+<option value="Social Media Editor">Social Media Editor</option>
+<option value="Members Benefit Consultant">Members Benefit Consultant</option>
+<option value="Members Campaign Consultant">Members Campaign Consultant</option>
+
+	</select>
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE6">Have experience in any of the following areas </label>
+	<select name="MMERGE6" class="" id="mce-MMERGE6">
+	<option value=""></option>
+	<option value="Website Design and Maintenance">Website Design and Maintenance</option>
+<option value="Grant Writing and Fundraising">Grant Writing and Fundraising</option>
+<option value="Writing and Editing">Writing and Editing</option>
+<option value="Legal Services / Compliance">Legal Services / Compliance</option>
+<option value="Data Analyst">Data Analyst</option>
+<option value="Video Editor">Video Editor</option>
+<option value="Graphics Design">Graphics Design</option>
+
+	</select>
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d936b18dafd103ed356a89c6_40d263ea9e" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='MMERGE5';ftypes[5]='zip';fnames[3]='MMERGE3';ftypes[3]='dropdown';fnames[6]='MMERGE6';ftypes[6]='dropdown';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
     </div>
   </div>
 </div>
