--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -12,7 +12,7 @@ body_class: volunteer
         Lorem ipsum
       </p>
       
-      <!-- Begin MailChimp Signup Form -->
+     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -22,7 +22,7 @@ body_class: volunteer
 <div id="mc_embed_signup">
 <form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=40d263ea9e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Join the YEP team</h2>
+	<h2>Join Our Team</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
@@ -39,13 +39,22 @@ body_class: volunteer
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
-<div class="mc-field-group">
+<div class="mc-field-group size1of2">
+	<label for="mce-PHONE">Phone Number  <span class="asterisk">*</span>
+</label>
+    <div class="phonefield phonefield-us">
+        (<span class="phonearea"><input class="phonepart required" pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text"></span>)
+        <span class="phonedetail1"><input class="phonepart required" pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> - 
+        <span class="phonedetail2"><input class="phonepart required" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
+		<span class="small-meta nowrap">(###) ###-####</span>
+    </div>
+</div><div class="mc-field-group">
 	<label for="mce-MMERGE5">Zip Code  <span class="asterisk">*</span>
 </label>
 	<input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5">
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE3">Please select one of the departments that you are interested in</label>
+	<label for="mce-MMERGE3">Are you interested in volunteering for a specific </label>
 	<select name="MMERGE3" class="" id="mce-MMERGE3">
 	<option value=""></option>
 	<option value="Job Placement Coordinator">Job Placement Coordinator</option>
@@ -62,7 +71,7 @@ body_class: volunteer
 	</select>
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE6">YEP is constantly seeking volunteers with specific skill sets. Do you have experience in any of the areas of expertise below? Either check any that apply or provide your inputs  </label>
+	<label for="mce-MMERGE6">YEP is constantly seeking volunteers with specific </label>
 	<select name="MMERGE6" class="" id="mce-MMERGE6">
 	<option value=""></option>
 	<option value="Website Design and Maintenance">Website Design and Maintenance</option>
@@ -80,12 +89,9 @@ body_class: volunteer
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d936b18dafd103ed356a89c6_40d263ea9e" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="submit" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='MMERGE5';ftypes[5]='zip';fnames[3]='MMERGE3';ftypes[3]='dropdown';fnames[6]='MMERGE6';ftypes[6]='dropdown';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-    </div>
-  </div>
-</div>
