--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -87,7 +87,7 @@ body_class: volunteer
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d936b18dafd103ed356a89c6_40d263ea9e" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="Apply" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
