--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -24,15 +24,10 @@ body_class: donate
                   <h1>Donate to YEP</h1>
                <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future. As a donor, you can ensure this work continues.</p>
                             
-<script src="https://api.causeview.com/form/v2.1/scripts/jquery-1.5.1.min.js" type="text/javascript"></script><script src="https://api.causeview.com/form/v2.1/scripts/crossdomain.js" type="text/javascript"></script>
-<script type="text/javascript"> $(function() { var src = 'https://api.causeview.com/form/v2.1/southstreet/a0JC000000SOXkQMAX?CID=701i0000000J7pb&FID=a0Gi00000031uPq'; $("#causeview_iframe").loadCauseViewForm({src:src, api:'https://api.causeview.com', frame_height:'150px', applyQueryStrings:true}); }); </script>
-<div id="causeview_iframe" class="causeviewContainer"></div>                                                        <center>
-                            <br>
-     <p><em>Please click &quot;Give Now&quot; only once and allow up to 10 seconds for your transaction to process. Clicking more than once could result in multiple charges to your card.</em></p>
-                                <hr/>
-                               
-                                <p>Your payment is protected through SSL encryption.</p>
-                                <hr/>
+<script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
+ style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+  <p>Your payment is protected through SSL encryption.</p>
+     <hr/>
     <p>
       YEP is tax exempt under Section 501(C)(3) of the IRS code. All donations are tax deductible per U.S. code using the tax ID number 46-2681571
      </p> 
