--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -21,8 +21,10 @@ body_class: donate
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                  <h1>Donate to YEP</h1>
-               <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future. As a donor, you can ensure this work continues.</p>
+                  <h1>Support Our Work</h1>
+               <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.
+Use the buttons below to make your donation today.
+</p>
                             
 <script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
  style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
