--- a/_pages/sponsor.html
+++ b/_pages/sponsor.html
@@ -8,9 +8,10 @@ body_class: sponsor
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                  <h1>Sponsors</h1>
-               <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future. As a donor, you can ensure this work continues.</p>
-                            
+                  <h1>Interested in Sponsoring YEP?</h1>
+<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+                    
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
