--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,24 +5,24 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<h1>Mission & Vision</h1>
+<h1>Vision & Mission </h1>
 
 <p class="intro">
-"No one person can make it in life without the support and guidance of other people in their lives." - Shimelse Mekonnen
+"When spider webs unite, they can tie up a lion" - Ethiopian Proverb
 </p>
 
 <img title="Mission & Vision" alt="" src="/assets/images/misc/yep-vision.jpg" />
+
+<h2>Our Vision</h2>
+
+<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
+The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.
+</p>
 
 <h2>Our Mission</h2>
 
 <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
 To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
-</p>
-
-<h2>Our Vision</h2>
-
-<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
-A strong community that shares ideas, skills and resources to enrich lives.
 </p>
 
 <h2>Goals</h2>
